# CS2-File-Dumper

./: .gitignore  CMakeLists.txt  README.md
CS2-File-Dumper/: CMakeLists.txt  file_collector.cpp  file_collector.h  git_manager.cpp  git_manager.h  main.cpp  steam_finder.cpp  steam_finder.h
dumps/cs2_2026-02-15_10-39-25/: dump_info.txt
dumps/cs2_2026-03-07_12-18-00/: dump_info.txt
